--- a/app/src/main/res/layout/activity_coffee_incremented.xml
+++ b/app/src/main/res/layout/activity_coffee_incremented.xml
@@ -8,10 +8,31 @@
 
     <TextView
         android:id="@+id/coffeeCountView_Incremented"
-        android:layout_width="144dp"
-        android:layout_height="77dp"
-        android:text="TextView"
+        android:layout_width="279dp"
+        android:layout_height="122dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="72dp"
+        android:textSize="30sp"
+        app:fontFamily="@font/crushed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="72dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="33dp" />
+        app:srcCompat="@drawable/coffee" />
 </android.support.constraint.ConstraintLayout>
