--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,41 +19,11 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:hint="@string/edit_message"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="49dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:onClick="sendMessage"
-        android:text="@string/button_send"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/editText" />
-
     <Button
         android:id="@+id/button2"
         android:layout_width="332dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="100dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="50dp"
         android:onClick="incrementCoffeeCount"
         android:text="@string/button_coffee"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,12 +32,14 @@
 
     <TextView
         android:id="@+id/coffeeCounterView_Main"
-        android:layout_width="97dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
+        android:layout_width="263dp"
+        android:layout_height="109dp"
+        android:layout_marginTop="20dp"
+        android:text="Beans!"
+        android:textSize="30sp"
+        app:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
