--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity"
     tools:layout_editor_absoluteY="81dp">
 
-    <!--Sample Banner for displaying ads.-->
+    Sample Banner for displaying ads.
     <com.aerserv.sdk.AerServBanner
         android:id="@+id/banner"
         android:layout_width="320dp"
@@ -27,15 +27,14 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/dessert_recycler"
         android:layout_width="300dp"
-        android:layout_height="150dp"
+        android:layout_height="220dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/banner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button2"
