--- a/app/src/main/res/layout/activity_gdprconsent.xml
+++ b/app/src/main/res/layout/activity_gdprconsent.xml
@@ -9,17 +9,27 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="247dp"
-        android:layout_height="333dp"
-        android:text="do you consent to gdpr"
+        android:layout_height="329dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:background="@android:color/holo_blue_light"
+        android:text="Do you consent?"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/gdpr_yes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="51dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/gdpr_yes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:background="@android:color/holo_green_light"
         android:onClick="acceptConsent"
         android:text="YES"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -32,6 +42,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
+        android:background="@android:color/holo_red_light"
         android:onClick="denyConsent"
         android:text="NO"
         app:layout_constraintStart_toEndOf="@+id/gdpr_yes"
