--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,14 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/dessert_recycler"
-        android:layout_width="300dp"
+        android:layout_width="340dp"
         android:layout_height="220dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:gravity="center_horizontal"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/banner"
