--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -7,8 +7,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/element_text"/>
+        android:layout_height="wrap_content"/>
 
     <com.aerserv.sdk.AerServBanner
         android:id="@+id/banner_recycle"
@@ -24,8 +23,15 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:clickable="true"
+        android:gravity="bottom|center_horizontal"/>
 
-        android:gravity="bottom|center_horizontal" />
-
+    <Button
+        android:id="@+id/button_send"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        android:onClick="doSomething" />
 
 </android.support.constraint.ConstraintLayout>
