--- a/app/src/main/res/layout/activity_coffee_incremented.xml
+++ b/app/src/main/res/layout/activity_coffee_incremented.xml
@@ -8,13 +8,13 @@
 
     <TextView
         android:id="@+id/coffeeCountView_Incremented"
-        android:layout_width="279dp"
-        android:layout_height="68dp"
+        android:layout_width="272dp"
+        android:layout_height="164dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="44dp"
         android:textSize="30sp"
         app:fontFamily="@font/crushed"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,9 +24,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
+        android:layout_width="176dp"
+        android:layout_height="137dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
@@ -38,16 +38,16 @@
 
     <Button
         android:id="@+id/button_coffee_showInterstitial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="316dp"
+        android:layout_height="81dp"
+        android:layout_marginBottom="30dp"
         android:background="@android:color/holo_green_light"
         android:onClick="showInterstitial"
         android:text="@string/button_showInterstitial_coffee"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/coffeeCountView_Incremented" />
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
