--- a/app/src/main/res/layout/activity_coffee_incremented.xml
+++ b/app/src/main/res/layout/activity_coffee_incremented.xml
@@ -4,50 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".CoffeeIncrementedActivity">
 
-    <TextView
-        android:id="@+id/coffeeCountView_Incremented"
-        android:layout_width="272dp"
-        android:layout_height="164dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:textSize="30sp"
-        app:fontFamily="@font/crushed"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="176dp"
-        android:layout_height="137dp"
-        android:layout_marginBottom="40dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/coffee" />
+        <TextView
+            android:id="@+id/coffeeCountView_Incremented"
+            android:layout_width="272dp"
+            android:layout_height="164dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="44dp"
+            android:textSize="30sp"
+            app:fontFamily="@font/crushed"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_coffee_showInterstitial"
-        android:layout_width="316dp"
-        android:layout_height="81dp"
-        android:layout_marginBottom="30dp"
-        android:background="@android:color/holo_green_light"
-        android:onClick="showInterstitial"
-        android:text="@string/button_showInterstitial_coffee"
-        android:textColor="@android:color/background_light"
-        android:textSize="18sp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="176dp"
+            android:layout_height="137dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/coffee" />
+
+        <Button
+            android:id="@+id/button_coffee_showInterstitial"
+            android:layout_width="316dp"
+            android:layout_height="81dp"
+            android:layout_marginBottom="30dp"
+            android:background="@android:color/holo_green_light"
+            android:onClick="showInterstitial"
+            android:text="@string/button_showInterstitial_coffee"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+    </LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
