Refactor, cleanup, and tested implementation
Removed random bogus activity declaration from manifest
Removed unneeded imports and comments/stubs/interface methods from GDPR_fragment
Removed unneeded params from the GDPR_fragment class that weren't being used
Added some useful comments regarding bindings and interface methods (or not)
Added a sipAndSwipeMode that will now call the sip activity only if the GlobalClass has it set to true. In otherwords, it is only for test omde
Added corresponding logic to only load the banner if we are not in sipAndSwipeMode
Enaabled support for supportA9 default to true for now
Renamed gdpr_frame -> gdpr_fragment to better represent what we are actually drawing, removed the params and tag that we include in the fragmentManager.add call

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/gdpr_frame"
+        android:id="@+id/gdpr_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
