--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,22 +20,34 @@
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         />
+    <com.aerserv.sdk.AerServBanner
+    android:id="@+id/banner_meitu"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:layout_marginBottom="90dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:gravity="center_horizontal"
+    />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/dessert_recycler"
         android:layout_width="340dp"
-        android:layout_height="220dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="center_horizontal"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/banner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/coffeeCounterView_Main" />
 
     <Button
     android:id="@+id/button2"
