--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,6 +88,19 @@
         app:layout_constraintBottom_toTopOf="@+id/banner"
         app:layout_constraintEnd_toStartOf="@+id/button3" />
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="viewAndListenToRadio"
+        android:text="@string/button_radio"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toTopOf="@+id/banner"
+        app:layout_constraintEnd_toStartOf="@+id/button4" />
+
     <TextView
         android:id="@+id/coffeeCounterView_Main"
         android:layout_width="263dp"
