--- a/app/src/main/res/layout/activity_dessert_menu_recycler.xml
+++ b/app/src/main/res/layout/activity_dessert_menu_recycler.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DessertMenuRecycler">
+    tools:context=".recycler.DessertMenuRecycler">
 
 
     <android.support.v7.widget.RecyclerView
