--- a/app/src/main/res/layout/fragment_gdpr.xml
+++ b/app/src/main/res/layout/fragment_gdpr.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         android:clickable="true"
         android:focusable="true"
-        tools:context=".GDPR_Fragment">
+        tools:context=".fragments.GDPR_Fragment">
 
     <View
         android:id="@+id/gdpr_background"
