--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,29 +37,31 @@
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button_interstitialTest"
         android:layout_width="332dp"
         android:layout_height="64dp"
         android:layout_marginTop="5dp"
         android:background="@color/coffeeColor"
-        android:onClick="incrementCoffeeCount"
+        android:onClick="nav_preloadInterstitialTest"
         android:text="@string/button_coffee"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/button_settings" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/button_settings"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginTop="8dp"
         android:background="@color/common_google_signin_btn_text_dark_focused"
-        android:onClick="viewSettings"
+        android:onClick="nav_viewSettings"
         android:text="@string/button_settings"
         android:textColor="@color/common_google_signin_btn_text_dark_pressed"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/gdpr_fragment" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button3"
@@ -68,25 +70,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="getDetailedStats"
+        android:onClick="nav_injectBannerTest"
         android:text="@string/button_stats"
         android:textSize="8sp"
         app:layout_constraintBottom_toTopOf="@+id/banner"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:onClick="getDessertMenu"
-        android:text="@string/button_dessert"
-        android:textSize="8sp"
-        app:layout_constraintBottom_toTopOf="@+id/banner"
-        app:layout_constraintEnd_toStartOf="@+id/button3" />
 
     <Button
         android:id="@+id/button6"
@@ -95,11 +83,11 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:onClick="viewAndListenToRadio"
+        android:onClick="nav_radioViewTest"
         android:text="@string/button_radio"
         android:textSize="8sp"
         app:layout_constraintBottom_toTopOf="@+id/banner"
-        app:layout_constraintEnd_toStartOf="@+id/button4" />
+        app:layout_constraintEnd_toStartOf="@+id/button3" />
 
     <TextView
         android:id="@+id/coffeeCounterView_Main"
@@ -113,12 +101,6 @@
         app:fontFamily="monospace"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/gdpr_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        app:layout_constraintTop_toBottomOf="@+id/button_interstitialTest" />
 
 </android.support.constraint.ConstraintLayout>
